--- a/src/style.css
+++ b/src/style.css
@@ -16,19 +16,19 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #eb5eeb;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f253e5;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /* margin: 0; */
+  /* display: flex; */
+  /* place-items: center;
+  min-width: 320px; */
+  /* min-height: 100vh; */
 }
 
 h1 {
@@ -37,10 +37,10 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
+  /* max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: center; */
 }
 
 .logo {
@@ -50,10 +50,10 @@ h1 {
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #fa64e6aa);
 }
 .logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
+  filter: drop-shadow(0 0 2em #fa7df0aa);
 }
 
 .card {
@@ -76,14 +76,14 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #f359c5;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -94,62 +94,49 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
 
-/* ///// */
 
-.tap {
-  position: absolute;
-  margin-left: 30px;
-  margin-top: -520px;
+
+ .tap {
+  margin-top: 10px;
 }
 
 #result{
-  position: absolute;
-  margin-left: 70px;
-  margin-top: -420px;
+  margin-left: 38px;
+  margin-top: 20px;
 }
 
 #toggleButton{
-  position: absolute;
-  margin-top: -520px;
-  margin-left: 350px;
+  margin-top: 20px;
 }
 
 #text{
-  margin-top: -270px;
-  margin-left: 337px;
-  position:absolute;
-  
-  
+ width: 300px;
 }
 
 #btn-increase{
-  position: absolute;
-  margin-left: 65px;
-}
+  margin-left: 68px;
+} 
 
-#first{
-  border: 5px solid rgb(247, 156, 171) ;
+ #first{
+  border: 5px solid rgb(241, 128, 217) ;
   border-radius: 5px;
-  position: absolute;
-  margin-left: 30px;
-  margin-top: 100px;
+  margin-top: 20px;
+  margin-left: 34px;
   width: 200px;
-
 }
 
 #progress-bar{
-  border: 15px solid rgb(233, 65, 93) 
-}
+  border: 15px solid rgb(228, 42, 181) 
+} 
 
 .like{
-  position: absolute;
-  margin-left: 100px;
-  margin-top: -190px;
+  margin-top: 30px;
+  margin-left: 90px;
 }
 
 .counter{
-  margin-left: 38px;
-}
+  margin-left: 40px;
+} 
