--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,7 @@ body {
   /* place-items: center;
   min-width: 320px; */
   /* min-height: 100vh; */
+ 
 }
 
 h1 {
@@ -129,7 +130,7 @@ button:focus-visible {
 }
 
 #progress-bar{
-  border: 15px solid rgb(228, 42, 181) 
+  border: 15px solid rgb(228, 42, 219) 
 } 
 
 .like{
@@ -140,3 +141,41 @@ button:focus-visible {
 .counter{
   margin-left: 40px;
 } 
+
+/* /// */
+h3 {
+  margin: 0;
+  padding-bottom: .3em;
+  padding-right: 20px;
+  font-size: 1.1em;
+}
+
+p {
+  margin: 0;
+  padding: 0 0 .5em;
+}
+
+.pane {
+  background: #eb76e5;
+  padding: 10px 20px 10px;
+  border-top: solid 2px #7c1bbd;
+  position: relative;
+}
+
+.remove-button {
+  position: absolute;
+  font-size: 110%;
+  top: 0;
+  color:rgb(20, 243, 243);
+  right: 10px;
+  display: block;
+  width: 24px;
+  height: 24px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+#container{
+  width: 600px;
+}
