--- a/src/style.css
+++ b/src/style.css
@@ -211,9 +211,31 @@ li {
 }
 
 #starr{
-  border: 4px solid rgba(155, 54, 138, 0.678);
+  border: 2px solid rgb(226, 106, 206);
   width: 420px;
   border-radius: 30px;
-  box-shadow: 5px 5px 5px #e485dc; 
+  box-shadow: 5px 5px 5px #dd9dd8; 
+  margin-top: 30px;
+}
+
+#ul li{
+  width: 90px;
+    border: #be43c9 1px solid;
+    border-radius: 10px;
+    padding: 5px;
+    box-shadow: 5px 5px 5px #e485dc;
+}
+
+li {
+  display: list-item;
+  text-align: center;
+}
+
+#ul {
+  user-select: none;
+  display: flex;
+  gap: 9px;
+  list-style: none;
+  margin-left: -30px;
   
 }
