--- a/src/style.css
+++ b/src/style.css
@@ -265,4 +265,32 @@ li {
   transform: rotate(-45deg);
 }
 
+.mai{
+  padding-top: 40px;
+}
+
+#ani{
+  border:#be43c9 3px solid;
+  width: 450px;
+  height: 180px;
+  text-align: center;
+}
+
+.juju{
+  background-color: #dd9dd8;
+}
+
+.n{
+  width: 40px;
+  height: 40px;
+}
+
+td{
+  height: 90px;
+  border: #f589ef 1px solid;
+}
+
+.fff img {
+  transition: opacity 0.3s ease-out;
+}
   
